ensure dark mode color is readable in image tabs

--- a/content/show-info.css
+++ b/content/show-info.css
@@ -15,6 +15,7 @@ main {
 }
 table {
   border-spacing: 0;
+  color: inherit;
 }
 table, tr, td {
   padding: 0;
